--- a/08-selectores/src/app/paises/pages/selectores/selectores.component.html
+++ b/08-selectores/src/app/paises/pages/selectores/selectores.component.html
@@ -4,26 +4,26 @@
 <form [formGroup]="formulario">
 
   <!-- Continentes -->
-   <div class="row mb-3">
+  <div class="row mb-3">
     <div class="col">
       <label class="form-label">Continente:</label>
       <select formControlName="continente" class="form-control">
         <option value="">Seleccione el continente</option>
-            <option *ngFor="let continente of continentes" [value]="continente">{{ continente }}</option>
+        <option *ngFor="let continente of continentes" [value]="continente">{{ continente }}</option>
       </select>
     </div>
-   </div>
+  </div>
 
   <!-- Países -->
   <div class="row mb-3">
     <div class="col">
       <label class="form-label">País:</label>
-      <select formControlName="continente" class="form-control">
+      <select formControlName="pais" class="form-control">
         <option value="">Seleccione el país</option>
-            <!-- <option *ngFor="let continente of continentes" [value]="continente">{{ continente }}</option> -->
+        <option *ngFor="let pais of paisesPorContinente" [value]="pais">{{ pais.nombre }}</option>
       </select>
     </div>
-   </div>
+  </div>
 
 </form>
 
