--- a/08-selectores/src/app/paises/pages/selectores/selectores.component.html
+++ b/08-selectores/src/app/paises/pages/selectores/selectores.component.html
@@ -31,7 +31,7 @@
       <label class="form-label">Frontera:</label>
       <select formControlName="frontera" class="form-control">
         <option value="">Seleccione la frontera</option>
-        <option *ngFor="let frontera of fronterasPorPais" [value]="frontera">{{ frontera }}</option>
+        <option *ngFor="let frontera of fronterasPorPais" [value]="frontera.cca3">{{ frontera.nombre }}</option>
       </select>
     </div>
   </div>
