--- a/10-mapas-app/src/app/mapas/pages/propiedades/propiedades.component.html
+++ b/10-mapas-app/src/app/mapas/pages/propiedades/propiedades.component.html
@@ -23,6 +23,10 @@
         </div>
       </div>
 
+      <div class="col-4 mb-2">
+        <contador/>
+      </div>
+
     </div>
   </div>
 </div>
