--- a/10-mapas-app/src/app/solo/pages/solo/solo.component.html
+++ b/10-mapas-app/src/app/solo/pages/solo/solo.component.html
@@ -1,5 +1,8 @@
 <div class="row mt-3">
-  <div class="col-2"></div>
+  <div class="col-2">
+    <menu-lateral />
+  </div>
+
   <div class="col-10">
     <h1>Componente Standalone - Página</h1>
     <hr>
